turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:2: error: Missing closing brace `}' assumed here
def setCouleurSol(couleur:Color) {
^LangtonsAnt:2: error: expected class or object definition
def setCouleurSol(couleur:Color) {
^LangtonsAnt:9: error: expected class or object definition
def step(rule:Array[Char], colors:Array[Color]) {
^